// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordSuccessContent Component should match the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      type="style-1"
    >
      Typography Component
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-3"
  >
    <div
      type="style-6"
    >
      Typography Component
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-4"
  >
    <div>
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-back-to-login"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Back to log in
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary"
        data-testid="btn-resend-link"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Resend Link
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ForgotPasswordSuccessContent Component should match the snapshot when email is not provided 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-47"
  >
    <div
      type="style-1"
    >
      Typography Component
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-48"
  >
    <div
      type="style-6"
    >
      Typography Component
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-49"
  >
    <div>
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="btn-back-to-login"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Back to log in
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary"
        data-testid="btn-resend-link"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Resend Link
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ForgotPasswordSuccessContent Component should match the snapshot when not show back to login provided 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-92"
  >
    <div
      type="style-1"
    >
      Typography Component
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-93"
  >
    <div
      type="style-6"
    >
      Typography Component
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-94"
  >
    <div>
      <span>
        Button Group Component
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary"
        data-testid="btn-resend-link"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Resend Link
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
